--- a/SpringCloudEurekaServer/src/main/resources/application.yml
+++ b/SpringCloudEurekaServer/src/main/resources/application.yml
@@ -6,6 +6,6 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:8761
+      defaultZone: http://2.2.2.2:8761
   server:
     wait-time-in-ms-when-sync-empty: 5
